package com.pahanaedu.models;

public enum OrderStatus { PENDING, PAID, CANCELLED, COMPLETED }