package com.pahanaedu.models;


public enum Role { ADMIN, STAFF }