package com.pahanaedu.models;

public enum PaymentStatus { PENDING, COMPLETED, FAILED, REFUNDED }